webhint error fixed

--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
             <div>
                 <h4 class="heading">Language</h4>
                 <ul>
-                  <li class="headinglist">JavaScript</li><br>
-                  <li class="headinglist">C#</li><br>
-                  <li class="headinglist">C++</li><br>
-                  <li class="headinglist">HTML</li><br>
-                  <li class="headinglist">CSS</li><br>
+                  <li class="headinglist">JavaScript<br/></li>
+                  <li class="headinglist">C#<br/></li>
+                  <li class="headinglist">C++<br/></li>
+                  <li class="headinglist">HTML<br/></li>
+                  <li class="headinglist">CSS<br/></li>
                 </ul>
               </div>
               <div>
                 <h4 class="heading">Frameworks</h4>
                 <ul>
-                  <li class="headinglist">Bootstrap</li><br>
-                  <li class="headinglist">Dot Net</li><br>
-                  <li class="headinglist">Entity Frameworks</li><br>
-                  <li class="headinglist">Asp.Net</li><br>
+                  <li class="headinglist">Bootstrap<br/></li>
+                  <li class="headinglist">Dot Net<br/></li>
+                  <li class="headinglist">Entity Frameworks<br/></li>
+                  <li class="headinglist">Asp.Net<br/></li>
                 </ul>
               </div>
               <div>
                 <h4 class="heading">Skills</h4>
                 <ul>
-                  <li class="headinglist">Problem Solving</li><br>
-                  <li class="headinglist">Logical Approach</li><br>
-                  <li class="headinglist">Creative</li><br>
-                  <li class="headinglist">Strong communication</li><br>
-                  <li class="headinglist">GitHub</li>
+                  <li class="headinglist">Problem Solving<br/></li>
+                  <li class="headinglist">Logical Approach<br/></li>
+                  <li class="headinglist">Creative<br/></li>
+                  <li class="headinglist">Strong communication<br/></li>
+                  <li class="headinglist">GitHub<br/></li>
                 </ul>
               </div>
           </div>
