changes required in 1st review has been done PR#1

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="shining-star"></div>
         <div class="developer-title align-center" >
           <h1 class="developer-name">Mr. Mudasir</h1>
-          <p class="software-developer">Software Developer</p>
+          <h2 class="software-developer">Software Developer</h2>
         </div>
           <p class="banner-text-pera">I can help you build a product, feature or website Look through some of my 
             work and experience! if you like what you see and have a project you need coded, don't hasitate to 
@@ -32,30 +32,30 @@
             <div>
                 <h4 class="heading">Language</h4>
                 <ul>
-                  <li class="headinglist">JavaScript<br/></li>
-                  <li class="headinglist">C#<br/></li>
-                  <li class="headinglist">C++<br/></li>
-                  <li class="headinglist">HTML<br/></li>
-                  <li class="headinglist">CSS<br/></li>
+                  <li class="headinglist">JavaScript</li>
+                  <li class="headinglist">C#></li>
+                  <li class="headinglist">C++</li>
+                  <li class="headinglist">HTML</li>
+                  <li class="headinglist">CSS</li>
                 </ul>
               </div>
               <div>
                 <h4 class="heading">Frameworks</h4>
                 <ul>
-                  <li class="headinglist">Bootstrap<br/></li>
-                  <li class="headinglist">Dot Net<br/></li>
-                  <li class="headinglist">Entity Frameworks<br/></li>
-                  <li class="headinglist">Asp.Net<br/></li>
+                  <li class="headinglist">Bootstrap</li>
+                  <li class="headinglist">Dot Net</li>
+                  <li class="headinglist">Entity Frameworks</li>
+                  <li class="headinglist">Asp.Net</li>
                 </ul>
               </div>
               <div>
                 <h4 class="heading">Skills</h4>
                 <ul>
-                  <li class="headinglist">Problem Solving<br/></li>
-                  <li class="headinglist">Logical Approach<br/></li>
-                  <li class="headinglist">Creative<br/></li>
-                  <li class="headinglist">Strong communication<br/></li>
-                  <li class="headinglist">GitHub<br/></li>
+                  <li class="headinglist">Problem Solving</li>
+                  <li class="headinglist">Logical Approach</li>
+                  <li class="headinglist">Creative</li>
+                  <li class="headinglist">Strong communication</li>
+                  <li class="headinglist">GitHub</li>
                 </ul>
               </div>
           </div>
