--- a/index.html
+++ b/index.html
@@ -194,6 +194,40 @@
             </div>
           </div>
       </section>
+      <section class="contact-form " id="contact">
+        <div>
+          <h2>CONTACT US</h2>
+          <p>
+            If you have an application you are interested in developing,
+            a feature that you need built or a project that needs coding. 
+            I’d love to help with it 
+          </p>
+        </div>
+        <form action="https://formspree.io/f/mgedjrgp" method="post" class="flex contact-form" >
+          <input type="text" name="full-name" id="full-name" pattern="[a-zA-Z'-'\s]*" class="input-cls"
+            placeholder="Full Name" maxlength="30" required />
+          <input type="email" name="email" id="email" class="input-cls"
+            placeholder="username@mail.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" required />
+          <textarea class="input-cls" name="message" id="message" cols="48" rows="9"
+            maxlength="500" placeholder="Enter text here" required ></textarea>
+          <input type="submit" class="btn btn-primary submit-btn" value="Submit" />
+        </form>
+      </section>
+      <footer class="footer">
+      <hr class="horizontal"/>
+          <div class="icon">
+            <ul class="icon-list">
+              <li><a href='#' ><i class='fab fa-twitter' ></i></a></li>
+              <li><a href='#' ><i class='fab fa-linkedin-in' ></i></a></li>
+              <li><a href='#' ><i class='fab fa-medium' ></i></a></li>
+              <li><a href='#' ><i class='fab fa-github' ></i></a></li>
+              <li><a href='#' ><i class='fab fa-angellist' ></i></a></li>
+            </ul>
+            </div>
+            <div class="footer-email">
+              <a href="#" class="text-hover">mudasir9757@gmail.com</a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
