Rotated header icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="welcom-name">Mudasir Sherwani</a>
+        <a href="#" class="welcom-name">Mudasir Sherwani</a>
           <nav class="flex-container">
             <ul class="flex-container menu-lists">
               <li>Portfolio</li>
