logo rotate onload event of page in javascript

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body>
+<body onload="document.body.className += ' loaded';">
     <header>
         <a href="#" class="welcom-name">Mudasir Sherwani</a>
           <nav class="flex-container">
